[gd_scene load_steps=13 format=2]

[ext_resource path="res://Chicarego.tres" type="DynamicFont" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Image from iOS.png" type="Texture" id=3]
[ext_resource path="res://morning-funny-beat-7741.mp3" type="AudioStream" id=4]
[ext_resource path="res://Fontes/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Image_from_iOS__5_-removebg-preview-3.png" type="Texture" id=6]
[ext_resource path="res://setinha_voltar.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://ChiKareGo2Font.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Theme" id=4]
LineEdit/styles/normal = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="FundoImgMenu" type="Sprite" parent="."]
position = Vector2( 596, 329 )
scale = Vector2( 1.73203, 1.69605 )
texture = ExtResource( 3 )

[node name="AlternarMusica" type="Button" parent="FundoImgMenu"]
margin_left = -324.0
margin_top = -178.0
margin_right = -273.0
margin_bottom = -140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NomeGame" type="Label" parent="."]
margin_left = 53.0
margin_top = 117.0
margin_right = 1077.0
margin_bottom = 147.0
rect_scale = Vector2( 3.38489, 3.38489 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Betegoshi'$ Adventure"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="LabelIniciar" type="Label" parent="."]
margin_left = 354.0
margin_top = 247.0
margin_right = 1378.0
margin_bottom = 262.0
rect_min_size = Vector2( 59, 0 )
rect_scale = Vector2( 5.35953, 5.35953 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Começar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IniciarButton" type="Button" parent="LabelIniciar"]
modulate = Color( 0.698039, 0.462745, 0.462745, 0 )
margin_left = -9.0
margin_top = -4.0
margin_right = 518.0
margin_bottom = 166.0
rect_scale = Vector2( 0.14196, 0.14196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelOptions" type="Label" parent="."]
margin_left = 431.0
margin_top = 384.0
margin_right = 1455.0
margin_bottom = 399.0
rect_min_size = Vector2( 59, 0 )
rect_scale = Vector2( 2.78478, 2.78478 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Opções"

[node name="ConfiguracoesButton" type="Button" parent="LabelOptions"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -4.0
margin_right = 203.0
margin_bottom = 59.0
rect_scale = Vector2( 0.257218, 0.257218 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSair" type="Label" parent="."]
margin_left = 460.0
margin_top = 426.0
margin_right = 1484.0
margin_bottom = 441.0
rect_min_size = Vector2( 59, 0 )
rect_scale = Vector2( 2.785, 2.785 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SairButton" type="Button" parent="LabelSair"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -3.94974
margin_top = -0.052536
margin_right = 21.0503
margin_bottom = 19.9475
rect_scale = Vector2( 1.29087, 1.29087 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BalaoNome" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 345 )
scale = Vector2( 1.10857, 0.914789 )
texture = ExtResource( 6 )

[node name="LineEdit" type="LineEdit" parent="BalaoNome"]
margin_left = -106.351
margin_top = -47.9549
margin_right = 96.6494
margin_bottom = 34.0451
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Insiranome" type="Label" parent="."]
visible = false
margin_left = 225.0
margin_top = 219.0
margin_right = 468.0
margin_bottom = 242.0
rect_scale = Vector2( 2.47737, 2.47737 )
custom_fonts/font = SubResource( 5 )
text = "INSIRA SEU NOME ABAIXO"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoSeta" type="TextureButton" parent="."]
visible = false
margin_left = 663.0
margin_top = 497.0
margin_right = 808.0
margin_bottom = 594.0
rect_rotation = -180.311
rect_scale = Vector2( 0.897358, 0.897358 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="FundoImgMenu/AlternarMusica" to="." method="_on_AlternarMusica_pressed"]
[connection signal="pressed" from="LabelIniciar/IniciarButton" to="." method="_on_IniciarButton_pressed"]
[connection signal="pressed" from="LabelOptions/ConfiguracoesButton" to="." method="_on_ConfiguracoesButton_pressed"]
[connection signal="pressed" from="LabelSair/SairButton" to="." method="_on_SairButton_pressed"]
[connection signal="pressed" from="BotaoSeta" to="." method="_on_TextureButton_pressed"]
